Update final docs
Update the README, create CHANGELOG and fix up the metadata in
preparation for release

Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>